--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "handlebars": "^4.7.7",
-    "pug": "^3.0.2"
+    "express": "^4.18.1"
   }
 }
